# innovation-cookiecutter

./: README.md
python-minimal/: README.md  cookiecutter.json
python-minimal/hooks/: post_gen_project.py
python-minimal/{{cookiecutter.project_slug}}/: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
python-minimal/{{cookiecutter.project_slug}}/.github/workflows/: tests.yml
