[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.module_name }}"
authors = [
    # TODO configure authors
    # { name = "Jane Smith", email = "jane.smith@example.com" },
    # { name = "John Doe", email = "john.doe@example.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # TODO configure install dependencies
    # "numpy~=2.0",
    # "pandas~=2.0",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "{{ cookiecutter.module_name }}.__version__"}
{%- if cookiecutter.use_ruff_format or cookiecutter.use_ruff_lint %}

[tool.ruff]
target-version = "py310"
line-length = 88
{%- if cookiecutter.use_ruff_lint %}

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
{%- endif %}
{%- endif %}
