[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.module_name }}"
authors = [
    # TODO configure authors
    # { name = "Jane Smith", email = "jane.smith@example.com" },
    # { name = "John Doe", email = "john.doe@example.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # TODO configure install dependencies
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "notebook~=7.4",
    "pre-commit~=4.2",
{%- if cookiecutter.use_pytest %}
    "pytest~=8.4",
{%- endif %}
{%- if cookiecutter.use_ruff_format or cookiecutter.use_ruff_lint %}
    "ruff==0.12.3",
{%- endif %}
]

[tool.setuptools.dynamic]
version = {attr = "{{ cookiecutter.module_name }}.__version__"}
{%- if cookiecutter.use_ruff_format or cookiecutter.use_ruff_lint %}

[tool.ruff]
target-version = "py310"
line-length = 88
{%- if cookiecutter.use_ruff_lint %}

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
{%- endif %}
{%- endif %}
