[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.module_name }}"
authors = [
    # TODO configure authors
    # { name = "Jane Smith", email = "jane.smith@example.com" },
    # { name = "John Doe", email = "john.doe@example.com" },
]
description = ""
readme = "README.md"
requires-python = "~={{ cookiecutter.__python_version }}"
dependencies = [
    # TODO configure install dependencies
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "notebook~={{ cookiecutter.__notebook_version }}",
    "pre-commit~={{ cookiecutter.__pre_commit_version }}",
{%- if cookiecutter.use_pytest %}
    "pytest~={{ cookiecutter.__pytest_version }}",
{%- endif %}
{%- if cookiecutter.use_ruff_format or cookiecutter.use_ruff_lint %}
    "ruff=={{ cookiecutter.__ruff_version }}",
{%- endif %}
]

[tool.setuptools.dynamic]
version = {attr = "{{ cookiecutter.module_name }}.__version__"}
{%- if cookiecutter.use_ruff_format or cookiecutter.use_ruff_lint %}

[tool.ruff]
target-version = "py{{ cookiecutter.__python_version.replace(".", "") }}"
line-length = 88
{%- if cookiecutter.use_ruff_lint %}

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
{%- endif %}
{%- endif %}
